; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_host.c_get_pages_grabbed_count.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_host.c_get_pages_grabbed_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__* }

@processor_list_lock = common dso_local global i32 0, align 4
@processor_list = common dso_local global %struct.TYPE_4__* null, align 8
@page_grab_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_pages_grabbed_count() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i32 @simple_lock(i32* @processor_list_lock)
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @processor_list, align 8
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %1, align 8
  br label %5

5:                                                ; preds = %8, %0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %19

8:                                                ; preds = %5
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = load i32, i32* @page_grab_count, align 4
  %11 = call i64 @PROCESSOR_DATA(%struct.TYPE_4__* %9, i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %11
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %2, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %1, align 8
  br label %5

19:                                               ; preds = %5
  %20 = call i32 @simple_unlock(i32* @processor_list_lock)
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @simple_lock(i32*) #1

declare dso_local i64 @PROCESSOR_DATA(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @simple_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
